--- a/views/user.ejs
+++ b/views/user.ejs
@@ -19,9 +19,11 @@
     .games {
         display: flex;
         justify-content: space-between;
-        overflow-x: scroll;
+        width: 90%;
+        height: 50%;;
+        /* overflow-x: scroll; */
         margin: 5% 5% 5%;
-        scroll-behavior: smooth;
+        /* scroll-behavior: smooth; */
     }
 
 
@@ -31,9 +33,9 @@
 
     .in-game {
         width: 40%;
-        height: 400px;
-        margin-left: 5%;
-        flex-shrink: 0;
+        height: 250px;
+        margin-left: 2%;
+        /* flex-shrink: 0; */
     }
 
     .t-t-t {
