--- a/games/chess.ejs
+++ b/games/chess.ejs
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/frontend/global.css">
   <title>Chess Board</title>
   <style>
     .chessboard {
@@ -11,6 +12,7 @@
       height: 400px;
       display: flex;
       flex-wrap: wrap;
+      margin: 150px auto;
     }
 
     .square {
