--- a/games/chess.ejs
+++ b/games/chess.ejs
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/frontend/global.css">
+  <link rel="icon" type="image/x-icon" href="../assets/favicon/favicon.ico" />
+  <link rel="stylesheet" href="../frontend/global.css">
   <title>Chess Board</title>
   <style>
     .chessboard {
