--- a/games/shootDown.ejs
+++ b/games/shootDown.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="../assets/favicon/favicon.ico" />
     <!-- <link href="/frontend/css/index.css" rel="stylesheet"> -->
     <link href="/frontend/animation.css" rel="stylesheet">
     <title>Shoot Down</title>
