--- a/games/ticTacToe.ejs
+++ b/games/ticTacToe.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="../assets/favicon/favicon.ico" />
     <link href="/frontend/global.css" rel="stylesheet">
     <link href="/frontend/animation.css" rel="stylesheet">
     <title>Tic Tac Toe</title>
