--- a/games/tic-tac-toe-online.ejs
+++ b/games/tic-tac-toe-online.ejs
@@ -83,6 +83,7 @@
 <body>
     <h1>Tic Tac Toe</h1>
     <input type="text" id="p2" />
+    <button onclick="aclick()"></button>
     <div class="container">
         <div class="scoreBoard">
             <label>Attempts :</label><label id="attempts"></label>
@@ -119,8 +120,8 @@
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const socket = io();
-        const userId = '<%= username %>';
         socket.emit("connection");
+        socket.emit("authenticate", { userID: "<%= username %>" });
 
         a = document.getElementById("box-0");
         b = document.getElementById("box-1");
@@ -140,12 +141,17 @@
         attempt = 0;
         scoreP1 = 0;
         scoreP2 = 0;
+        let players;
 
         const player2 = document.getElementById("p2");
         const attempts = document.getElementById("attempts");
         const result = document.getElementById("result");
         const score_1 = document.getElementById("score-1");
         const score_2 = document.getElementById("score-2");
+
+        function aclick() {
+            players = player2.value;
+        }
 
         function clik(x) {
             if (p1Win == false && p2Win == false && cliked == false) {
@@ -155,14 +161,14 @@
                     cliked = true;
                     winCheck();
                     const message = x;
-                    socket.emit('send_message', { recipientId: player2.text, content1: message, content2: toss });
+                    socket.emit('send_message', { senderID: "<%= username %>", recipientID: players, content1: message, content2: toss });
                 }
             }
         }
 
         // Receive messages from the server
         socket.on('new_message', (data) => {
-            const { sender, content1, content2 } = data;
+            const { senderID, content1, content2 } = data;
             console.log(`New message from ${sender}: ${content1}`);
             if (box[content1].innerText == "") {
                 box[content1].innerText = content2;
