--- a/views/user.ejs
+++ b/views/user.ejs
@@ -78,7 +78,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="/<%= username %>""><span class=" material-symbols-outlined"
+                <li><a href="/<%= username %>"><span class=" material-symbols-outlined"
                         style="color: white;">account_circle</span>
                         <%= username %>
                     </a></li>
@@ -92,14 +92,14 @@
         <div class="in-game" onclick="t_t_t()">Tic Tac Toe</div>
         <div class="in-game" onclick="chess()">chess</div>
     </div>
-    <div class="friends" id="friends">
+    <!-- <div class="friends" id="friends">
         <label>Friends:</label>
         <ul>
             <li>jithesh</li>
             <li>vijeth</li>
             <li>mayur</li>
         </ul>
-    </div>
+    </div> -->
     <script>
         function r_p_c() {
             window.location.href = "/<%= username %>/Rock-Paper-Scissors";
