--- a/games/tic-tac-toe-online.ejs
+++ b/games/tic-tac-toe-online.ejs
@@ -12,7 +12,25 @@
             color: white;
             text-align: center;
         }
-
+        h2 {
+            color: white;
+            text-align: center;
+        }
+        #retry{
+            display: inline-block;
+            padding: 10px;
+            background-color: #ff9900;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 4px;
+            width: 200px;
+            font-weight: bold;
+            border-style: none;
+            margin: auto;
+        }
+.result{
+    margin: auto;
+}
         .container {
             display: flex;
             justify-content: space-between;
@@ -113,6 +131,11 @@
     <script>
         let box1;
         function playWithBot() {
+            const scriptToRemove = document.getElementById("tictactoebot-script");
+            if (scriptToRemove) {
+                console.log("removed")
+                scriptToRemove.remove();
+            }
             document.getElementById("container").innerHTML = `
             <div class="gameBoard">
                 <h1>Tic Tac Toe</h1>
@@ -134,6 +157,7 @@
             </div>`
             const script = document.createElement("script");
             script.src = "../frontend/tictactoebot.js";
+            script.id = "tictactoebot-script";
             document.body.appendChild(script);
         }
     </script>
