--- a/games/tic-tac-toe-online.ejs
+++ b/games/tic-tac-toe-online.ejs
@@ -161,7 +161,7 @@
             document.body.appendChild(script);
         }
     </script>
-    <!-- <script src="/socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script>
         function playWithFriends() {
             document.getElementById("container").innerHTML = `
@@ -273,7 +273,7 @@
             checkWin(0, 3, 6);
             checkWin(6, 7, 8);
         }
-    </script> -->
+    </script>
 </body>
 
 </html>
