tic tac toe game build

--- a/games/tic-tac-toe-online.ejs
+++ b/games/tic-tac-toe-online.ejs
@@ -12,11 +12,13 @@
             color: white;
             text-align: center;
         }
+
         h2 {
             color: white;
             text-align: center;
         }
-        #retry{
+
+        #retry {
             display: inline-block;
             padding: 10px;
             background-color: #ff9900;
@@ -24,16 +26,20 @@
             text-decoration: none;
             border-radius: 4px;
             width: 200px;
+            height: 50px;
             font-weight: bold;
             border-style: none;
             margin: auto;
         }
-.result{
-    margin: auto;
-}
+
+        .result {
+            margin: 100px auto;
+        }
+
         .container {
             display: flex;
             justify-content: space-between;
+            margin: auto;
             margin-top: 4%;
         }
 
@@ -91,29 +97,58 @@
 
         @media only screen and (max-width: 768px) {
             .container {
-                margin: 40px auto;
+                display: flex;
+                justify-content: space-between;
+                margin-top: 40%;
+            }
+
+            .gameBoard {
                 background-color: rgb(46, 44, 44);
                 padding: 10px;
                 border-radius: 8px;
                 display: flex;
-                flex-direction: column;
                 justify-content: space-between;
+                flex-direction: column;
+                margin: auto;
                 width: 90%;
-                height: 500%;
+                height: 500px;
             }
 
-            .scoreBoard {
+            .findMatch {
+                background-color: rgb(46, 44, 44);
                 padding: 10px;
-                color: white;
+                border-radius: 8px;
                 display: flex;
-                flex-direction: column;
                 justify-content: space-between;
+                flex-direction: column;
+                margin: auto;
+                width: 90%;
+                height: 4s00px;
+                padding: 10px;
             }
 
-            .gameBoard {
+            .findMatch>button {
+                display: inline-block;
                 padding: 10px;
+                background-color: #ff9900;
+                color: #fff;
+                text-decoration: none;
+                border-radius: 4px;
+                width: 200px;
+                height: 70px;
+                font-weight: bold;
+                border-style: none;
                 margin: auto;
             }
+
+            .boardBox {
+                width: 90px;
+                height: 90px;
+                border-radius: 10px;
+                border: none;
+                margin: 10px 10px 10px 10px;
+            }
+
         }
     </style>
 </head>
@@ -161,13 +196,13 @@
         }
     </script>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
+    <!-- <script>
         function playWithFriends() {
             const scriptToRemove1 = document.getElementById("tictactoebot-script1");
             if (scriptToRemove1) {
                 scriptToRemove1.remove();
             }
-            
+
             document.getElementById("container").innerHTML = `
             <div class="friends">
                 <h1>Friends</h1>
@@ -180,6 +215,145 @@
             script.src = "../frontend/tictactoeonline.js";
             script.id = "tictactoebot-script1";
             document.body.appendChild(script);
+        }
+    </script> -->
+    <script>
+        const socket = io();
+        socket.emit("connection");
+        socket.emit("authenticate", { userID: "<%= username %>" });
+        player2 = ""
+        senderName = "<%= username %>";
+        function findMatch() {
+
+            document.getElementById("container").innerHTML = `
+            <div class="loadingMatch">
+                <h1>Finding players...</h1>
+                <h2>Estimate time 30s..</h2>
+            </div>`
+
+            socket.emit('findMatch', { senderID: "<%= username %>" });
+            socket.on('matched', (matchedUserData) => {
+                console.log('You are matched with:', matchedUserData);
+                player2 = matchedUserData;
+                if (matchedUserData) {
+                    loadBoard()
+                }
+            });
+        }
+        function loadBoard() {
+            // const scriptToRemove1 = document.getElementById("tictactoebot-script1");
+            // if (scriptToRemove1) {
+            //     scriptToRemove1.remove();
+            // }
+            document.getElementById("container").innerHTML = `
+            <div class="gameBoard">
+                <h1>Tic Tac Toe</h1>
+                <div class="row">
+                    <button id="box-0" class="boardBox"></button>
+                    <button id="box-1" class="boardBox"></button>
+                    <button id="box-2" class="boardBox"></button>
+                </div>
+                <div class="row">
+                    <button id="box-3" class="boardBox"></button>
+                    <button id="box-4" class="boardBox"></button>
+                    <button id="box-5" class="boardBox"></button>
+                </div>
+                <div class="row">
+                    <button id="box-6" class="boardBox"></button>
+                    <button id="box-7" class="boardBox"></button>
+                    <button id="box-8" class="boardBox"></button>
+                </div>
+            </div>`
+            // const script = document.createElement("script");
+            // script.src = "../frontend/tictactoeonline.js";
+            // script.id = "tictactoebot-script1";
+            // document.body.appendChild(script);
+            a = document.getElementById("box-0");
+b = document.getElementById("box-1");
+c = document.getElementById("box-2");
+d = document.getElementById("box-3");
+e = document.getElementById("box-4");
+f = document.getElementById("box-5");
+g = document.getElementById("box-6");
+h = document.getElementById("box-7");
+i = document.getElementById("box-8");
+
+let box = [a, b, c, d, e, f, g, h, i];
+p1Win = false;
+p2Win = false;
+cliked = false;
+toss = 'X';
+attempt = 0;
+scoreP1 = 0;
+scoreP2 = 0;
+let players;
+
+// Attach event listeners to buttons here
+for (let x = 0; x < box.length; x++) {
+    box[x].addEventListener('click', function () {
+        clik(x);
+    });
+}
+
+function clik(x) {
+    if (p1Win == false && p2Win == false && cliked == false) {
+        console.log("inside clik()");
+        if (box[x].innerText == "") {
+            box[x].innerText = toss;
+            cliked = true;
+            winCheck();
+            const message = x;
+            console.log("p2:v"+player2)
+            socket.emit('send_message', { senderID: senderName, recipientID: player2, content1: message, content2: toss });
+        }
+    }
+}
+
+// Receive messages from the server
+socket.on('new_message', (data) => {
+    const { senderID, content1, content2 } = data;
+    console.log(`New message from ${senderID}: ${content1} :${content2}`);
+    if (box[content1].innerText == "") {
+        box[content1].innerText = content2;
+        cliked = false;
+        winCheck();
+    }
+    if (content2 == 'X') {
+        toss = 'O'
+    } else {
+        toss = 'X'
+    }
+});
+
+function checkWin(x, y, z) {
+    if (box[x].innerText == "X" && box[y].innerText == "X" && box[z].innerText == "X") {
+        //checks left to right diag line for player
+        console.log("You WIN");
+        pWin = true;
+        result.innerText = "X Wins";
+        // score_1.innerText = ++scoreP1;
+        attempt++;
+        attempts.innerText = attempt;
+
+    } else if (box[x].innerText == "O" && box[y].innerText == "O" && box[z].innerText == "O") {
+        //checks left to right diag line for bot
+        bWin = true;
+        result.innerText = "O Wins";
+        attempt++;
+        attempts.innerText = attempt;
+    }
+}
+
+function winCheck() {
+    checkWin(0, 4, 8);
+    checkWin(1, 4, 7);
+    checkWin(0, 1, 2);
+    checkWin(2, 4, 6);
+    checkWin(2, 5, 8);
+    checkWin(3, 4, 5);
+    checkWin(0, 3, 6);
+    checkWin(6, 7, 8);
+}
         }
     </script>
 </body>
